Fixed: Collapse button arrow points right when sidebar is collapsed
- Adjusted the behavior of the Collapse button to ensure that its arrow icon points to the right when the sidebar navigation is collapsed.

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -141,3 +141,7 @@
     display: flex;
   }
 }
+
+.flipIconVertical > button > img {
+  rotate: (180deg);
+}
